# camera_streamer

./: CMakeLists.txt  Configuration.cpp  README.md  main.cpp
assets/: camera.config.env  camera_capturer.sh
src/: CURLSession.cpp  CURLSession.h  Configuration.cpp  Configuration.h  main.cpp
